# jxv-xmonad

./: LICENSE  README.md  jxv-xmonad.cabal  stack.yaml
app/: Main.hs
src/: JxvXMonad.hs
test/Test/: JxvXMonadSpec.hs
