name:
  jxv-xmonad
version:
  0.1.0.0
synopsis:
  Insert synopsis
description:
  Please see README.md
homepage:
  http://github.com/githubuser/jxv-xmonad#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Author name here
maintainer:
  http://github.com/githubuser
copyright:
  2016 Author name here
category:
  Web
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    JxvXMonad
  build-depends:
      base >= 4.7 && < 5
    , data-default
    , mtl
    , transformers
    , xmonad
    , xmonad-contrib
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections

executable jxv-xmonad-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , jxv-xmonad
  default-language:
    Haskell2010

test-suite jxv-xmonad-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , jxv-xmonad
    , hspec
    , mtl
    , test-fixture
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    TemplateHaskell

source-repository head
  type:
    git
  location:
    https://github.com/githubuser/jxv-xmonad
